Fixing tabs alignments

--- a/style/about.css
+++ b/style/about.css
@@ -536,6 +536,7 @@ body {
         width: 130px;
         height: 55px;
         font-size: 20px;
+        margin-top: 12%;
     }
 }
 @media screen and (min-width: 481px) {
